terraform/kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - 'my-kfp-cluster-5c26-442dbba0442be6c8c50f31ed96b00601-0000.us-south.containers.appdomain.cloud'
    - '*.my-kfp-cluster-5c26-442dbba0442be6c8c50f31ed96b00601-0000.us-south.containers.appdomain.cloud'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
